force-app/main/default/objects/Trip_Technician__c/Trip_Technician__c.object-meta.xml
<CustomObject>
    <label>Assigned Technician</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Technician Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TripTechnicians</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>