force-app/main/default/objects/Trip_Technician__c/fields/Field_Resource__c.field-meta.xml
<CustomField>
    <fullName>Field_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Resource</label>
    <referenceTo>Field_Resource__c</referenceTo>
    <relationshipName>TripTechnicians</relationshipName>
    <type>Lookup</type>
</CustomField>