force-app/main/default/objects/Trip_Technician__c/fields/Technician__c.field-meta.xml
<CustomField>
    <fullName>Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technician</label>
    <referenceTo>Technician__c</referenceTo>
    <relationshipLabel>TripTechnicians</relationshipLabel>
    <relationshipName>TripTechnicians</relationshipName>
    <type>Lookup</type>
</CustomField>